Reworked the loader.
Reinstated LiveLoadDisplayListener to use a histogram
to record response times.

Updated configuration property 'users' to 'usersPerThread'.